src/test/deca/context/valid/created/test_objet_chain.deca
class A {
    int x;
    A getMe() {
        return this;
    }
}

{
    A a = new A();

    a.getMe().getMe().x = 3;
    

    new A().x = 5;
}