src/test/deca/context/invalid/created/convF.deca
{
    int a;
    float b = 5.5;
    
    a = b; 
}